add triangle images for between sections

--- a/index.html
+++ b/index.html
@@ -102,113 +102,112 @@
           </section>
         </section>
       </article>
-      <article>
-        <h2>PORTFOLIO</h2>
-          <div class="portfolio-slider">
-            <figure>
-              <img src="" alt="Hand holding an iPhone" title="Crispers/Clouders app">
-            </figure>
-
-          </div>
-
-        <section>
-          <h3><a href="">All works</a></h3>
-          <ul>
-            <li>
-              <figure>
-                <a href=""><img src="" alt="Image of Youtube screen" title="Youtube image"></a>
-                <figcaption>
-                  <h4>Youtube iphone app</h4>
-                  <p>UI design, brand &amp; logotypes</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <a href=""><img src="" alt="Image of Avengers welcome screen" title="Avengers welcome screen"></a>
-                <figcaption>
-                  <h4>Hexagon onepage</h4>
-                  <p>Webdesign, brand &amp; logotypes</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <a href=""><img src="" alt="Image of drawing tools and sketches of fantasy characters" title="Fantasy character sketches"></a>
-                <figcaption>
-                  <h4>Sketches icon</h4>
-                  <p>Icons design, brand &amp; logotypes</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <a href=""><img src="" alt="Image of logotypes on screen" title="Logotypes"></a>
-                <figcaption>
-                  <h4>Logotypes volume</h4>
-                  <p>UI design, brand &amp; logotypes</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <a href=""><img src="" alt="Image of app screen with points displayed" title="Points screen"></a>
-                <figcaption>
-                  <h4>Flight control</h4>
-                  <p>Webdesign, brand &amp; logotypes</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <a href=""><img src="" alt="Image of Youtube app on a handheld device" title="Youtube app image"></a>
-                <figcaption>
-                  <h4>Youtube app</h4>
-                  <p>Icons design, brand &amp; logotypes</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <a href=""><img src="" alt="Image of app screen for claim management" title="Claim management screen"></a>
-                <figcaption>
-                  <h4>Management</h4>
-                  <p>UI design, brand &amp; logotypes</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <a href=""><img src="" alt="Image of recipe app screen for korean bulgogi beef" title="Korean beef recipe screen"></a>
-                <figcaption>
-                  <h4>Korean beef</h4>
-                  <p>Webdesign, brand &amp; logotypes</p>
-                </figcaption>
-              </figure>
-            </li>
-            <li>
-              <figure>
-                <a href=""><img src="" alt="Image of Facebook like and dislike thumb icons" title="Facebook thumbs"></a>
-                <figcaption>
-                  <h4>Facebook thumbs</h4>
-                  <p>Icons design, brand &amp; logotypes</p>
-                </figcaption>
-              </figure>
-            </li>
+      <article class="portfolio-container section-arrows-orange">
+        <h2 class="portfolio-section-header gray-line">PORTFOLIO</h2>
+        <div class="portfolio-slider">
+          <figure class="portfolio-slider-figure">
+            <img class="portfolio-slider-overlay" src="img/slider.jpg" width="940" height="336" alt="image advertising Crispers iphone app" title="Crispers/Clouders app">
+            <figcaption class="portfolio-slider-caption">
+              <h3 class="white-color">Crispers</h3>
+              <p>Nice, crispy and creative landing page</p>
+              <a href="http://google.com"><button class="portfolio-slider-button">GET THE APP</button></a>
+              <p>Available for iPhone and iPad</p>
+            </figcaption>
+          </figure>
+          <ul class="portfolio-slider-bullets" title="slider bullets" aria-hidden="true">
+            <li title="first bullet"></li>
+            <li title="second bullet"></li>
+            <li title="third bullet"></li>
+            <li title="fourth bullet" class="slider-bullet-active"></li>
+            <li title="fifth bullet"></li>
           </ul>
-        </section>
-        <section>
-          <h3><a href="">Webdesign</a></h3>
-        </section>
-        <section>
-          <h3><a href="">UI design</a></h3>
-        </section>
-        <section>
-          <h3><a href="">Icons design</a></h3>
-        </section>
-        <section>
-          <h3><a href="">Brand &amp; Logotypes</a></h3>
-        </section>
+        </div>
+
+      <!-- <section class="portfolio-section"> -->
+        <!-- <h3 class="portfolio-section-header"><a class="portfolio-selected-category" href="">All works</a></h3> -->
+        <nav title="portfolio navigation">
+          <ul title="portfolio-categories">
+            <li><a class="portfolio-menu-item portfolio-selected-category" href="">All works</a></li>
+            <li><a class="portfolio-menu-item" href="">Webdesign</a></li>
+            <li><a class="portfolio-menu-item" href="">UI design</a></li>
+            <li><a class="portfolio-menu-item" href="">Icon design</a></li>
+            <li><a class="portfolio-menu-item" href="">Brand &amp; Logotypes</a></li>
+          </ul>
+        </nav>
+
+        <figure class="portfolio-item">
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/ytube-app.jpg" alt="Image of Youtube app on a handheld device" title="Youtube app image"></a>
+          <figcaption>
+            <h4 class="portfolio-caption-header">Youtube app</h4>
+            <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
+          </figcaption>
+        </figure>
+
+        <figure class="portfolio-item">
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/hexagon.jpg" alt="Image of Avengers welcome screen" title="Avengers welcome screen"></a>
+          <figcaption>
+            <h4 class="portfolio-caption-header">Hexagon onepage</h4>
+            <p class="portfolio-category">Webdesign, brand &amp; logotypes</p>
+          </figcaption>
+        </figure>
+
+        <figure class="portfolio-item">
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/sketches.jpg" alt="Image of drawing tools and sketches of fantasy characters" title="Fantasy character sketches"></a>
+          <figcaption>
+            <h4 class="portfolio-caption-header">Sketches icon</h4>
+            <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
+          </figcaption>
+        </figure>
+
+        <figure class="portfolio-item">
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/logotypes.jpg" alt="Image of logotypes on screen" title="Logotypes"></a>
+          <figcaption>
+            <h4 class="portfolio-caption-header">Logotypes volume</h4>
+            <p class="portfolio-category">UI design, brand &amp; logotypes</p>
+          </figcaption>
+        </figure>
+
+        <figure class="portfolio-item">
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/flight.jpg" alt="Image of app screen with points displayed" title="Points screen"></a>
+          <figcaption>
+            <h4 class="portfolio-caption-header">Flight control</h4>
+            <p class="portfolio-category">Webdesign, brand &amp; logotypes</p>
+          </figcaption>
+        </figure>
+
+        <figure class="portfolio-item">
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/ytube-app.jpg" alt="Image of Youtube app on a handheld device" title="Youtube app image"></a>
+          <figcaption>
+            <h4 class="portfolio-caption-header">Youtube app</h4>
+            <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
+          </figcaption>
+        </figure>
+
+        <figure class="portfolio-item">
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/management.jpg" alt="Image of app screen for claim management" title="Claim management screen"></a>
+          <figcaption>
+            <h4 class="portfolio-caption-header">Management</h4>
+            <p class="portfolio-category">UI design, brand &amp; logotypes</p>
+          </figcaption>
+        </figure>
+
+        <figure class="portfolio-item">
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/korean.jpg" alt="Image of recipe app screen for korean bulgogi beef" title="Korean beef recipe screen"></a>
+          <figcaption>
+            <h4 class="portfolio-caption-header">Korean beef</h4>
+            <p class="portfolio-category">Webdesign, brand &amp; logotypes</p>
+          </figcaption>
+        </figure>
+
+        <figure class="portfolio-item">
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/facebook-thumb.jpg" alt="Image of Facebook like and dislike thumb icons" title="Facebook thumbs"></a>
+          <figcaption>
+            <h4 class="portfolio-caption-header">Facebook thumbs</h4>
+            <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
+          </figcaption>
+        </figure>
+      <!-- </section> -->
+
       </article>
       <article>
         <h2>ABOUT</h2>
@@ -324,21 +323,21 @@
           <button class="icon-chevron-right client-button circle"></button>
         </section>
       </article>
-      <article>
-        <h2>CONTACT</h2>
-        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
-        <form>
+      <article class="contact-section section-arrows-white">
+        <h2 class="contact-section-header section-header white-color white-line">CONTACT</h2>
+        <p class="contact-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
+        <form class="contact-form">
           <input type="text" name="company-name" placeholder="Company name">
           <input type="email" name="company-email" placeholder="Your@mail.com">
-          <textarea name="company-message" rows="10" cols="50">Message...</textarea>
+          <textarea name="company-message" rows="8" cols="60">Message...</textarea>
           <input type="submit" name="submit-button" value="SEND MESSAGE">
         </form>
-        <figure>
-          <img src="" alt="Map of San Francisco location" title="San Francisco location">
-          <figcaption>
-            <a href="">+970 897 580<span>(7:00 - 20:00)</span></a>
-            <a href="">info@company.com</a>
-            <a href="">USA, <span>San Francisco, 57010, Little Parry St. 826/31</span></a>
+        <figure class="contact-map">
+          <img src="img/map-mobile.jpg" alt="Map of San Francisco location" title="San Francisco location">
+          <figcaption class="contact-map-caption">
+            <a class="contact-phone" href="">+970 897 580 <span class="contact-weight-light">(7:00 - 20:00)</span></a>
+            <a class="contact-email" href="">info@company.com</a>
+            <a class="contact-location" href="">USA, <span class="contact-weight-light">San Francisco, 57010, Little Parry St. 826/31</span></a>
           </figcaption>
         </figure>
       </article>
