Add and finalize layout for Footer section

--- a/index.html
+++ b/index.html
@@ -343,24 +343,12 @@
       </article>
     </main>
     <footer>
-      <p>Theme by <span>Pierre Borodin</span> &copy; copyright 2012</p>
-      <ul>
-        <li>
-          <a href=""><img src="" alt="Icon of Facebook" title="Facebook"></a>
-        </li>
-        <li>
-          <a href=""><img src="" alt="Icon of Twitter" title="Twitter"></a>
-        </li>
-        <li>
-          <a href=""><img src="" alt="Icon of Dribble" title="Dribble"></a>
-        </li>
-        <li>
-          <a href=""><img src="" alt="Icon of LinkedIn" title="LinkedIn"></a>
-        </li>
-        <li>
-          <a href=""><img src="" alt="Icon of Google+" title="Google+"></a>
-        </li>
-      </ul>
+      <p>Theme by <span class="footer-name">Pierre Borodin</span> <span class="footer-copyright">&copy; copyright 2012<span></p>
+      <a href="https://www.facebook.com" class="social-icons icon-facebook"></a>
+      <a href="https://twitter.com" class="social-icons icon-twitter"></a>
+      <a href="https://dribbble.com" class="social-icons icon-dribbble"></a>
+      <a href="https://www.linkedin.com" class="social-icons icon-linkedin2"></a>
+      <a href="https://plus.google.com" class="social-icons icon-google-plus"></a>
     </footer>
   </body>
 </html>
