--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <a href="">Team.</a>
       <a href="">Contact.</a>
     </nav>
-    <header>
-      <img src="" alt="Logo for Avengers" title="Avengers logo">
-      <h1>Hi there! We're Avengers, <strong>creative design agency</strong> we build <strong>awesome</strong> mobile and websites</h1>
+    <header class="header-content">
+      <img class="logo circle" width="21" height="32" src="img/tear-drop-two.svg" alt="Logo for Avengers" title="Avengers logo">
+      <h1 class="header-logo-text">Hi there! We're Avengers, <strong>creative design agency</strong> we build <strong class="curve-underline">awesome</strong> mobile and websites</h1>
     </header>
     <main>
       <article class="services-container">
