change all URL paths from relative to absolute
clean up code, eliminate unnecessary comments.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     <nav class="menu">
@@ -23,7 +22,7 @@
       <a href="#contact">Contact.</a>
     </nav>
     <header id="home" class="header-content">
-      <img class="logo circle" width="21" height="32" src="img/tear-drop-two.svg" alt="Logo for Avengers" title="Avengers logo">
+      <img class="logo circle" width="21" height="32" src="/img/tear-drop-two.svg" alt="Logo for Avengers" title="Avengers logo">
       <h1 class="header-logo-text">Hi there! We're Avengers, <strong>creative design agency</strong> we build <strong class="curve-underline">awesome</strong> mobile and websites</h1>
     </header>
     <main>
@@ -106,7 +105,7 @@
         <h2 class="portfolio-section-header gray-line">PORTFOLIO</h2>
         <div class="portfolio-slider">
           <figure class="portfolio-slider-figure">
-            <img class="portfolio-slider-overlay" src="img/slider.jpg" width="940" height="336" alt="image advertising Crispers iphone app" title="Crispers/Clouders app">
+            <img class="portfolio-slider-overlay" src="/img/slider.jpg" width="940" height="336" alt="image advertising Crispers iphone app" title="Crispers/Clouders app">
             <figcaption class="portfolio-slider-caption">
               <h3 class="white-color">Crispers</h3>
               <p>Nice, crispy and creative landing page</p>
@@ -123,8 +122,6 @@
           </ul>
         </div>
 
-      <!-- <section class="portfolio-section"> -->
-        <!-- <h3 class="portfolio-section-header"><a class="portfolio-selected-category" href="">All works</a></h3> -->
         <nav title="portfolio navigation">
           <ul title="portfolio-categories">
             <li><a class="portfolio-menu-item portfolio-selected-category" href="">All works</a></li>
@@ -136,7 +133,7 @@
         </nav>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/ytube-app.jpg" alt="Image of Youtube app on a handheld device" title="Youtube app image"></a>
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/ytube-app.jpg" alt="Image of Youtube app on a handheld device" title="Youtube app image"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Youtube app</h4>
             <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
@@ -144,7 +141,7 @@
         </figure>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/hexagon.jpg" alt="Image of Avengers welcome screen" title="Avengers welcome screen"></a>
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/hexagon.jpg" alt="Image of Avengers welcome screen" title="Avengers welcome screen"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Hexagon onepage</h4>
             <p class="portfolio-category">Webdesign, brand &amp; logotypes</p>
@@ -152,7 +149,7 @@
         </figure>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/sketches.jpg" alt="Image of drawing tools and sketches of fantasy characters" title="Fantasy character sketches"></a>
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/sketches.jpg" alt="Image of drawing tools and sketches of fantasy characters" title="Fantasy character sketches"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Sketches icon</h4>
             <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
@@ -160,7 +157,7 @@
         </figure>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/logotypes.jpg" alt="Image of logotypes on screen" title="Logotypes"></a>
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/logotypes.jpg" alt="Image of logotypes on screen" title="Logotypes"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Logotypes volume</h4>
             <p class="portfolio-category">UI design, brand &amp; logotypes</p>
@@ -168,7 +165,7 @@
         </figure>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/flight.jpg" alt="Image of app screen with points displayed" title="Points screen"></a>
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/flight.jpg" alt="Image of app screen with points displayed" title="Points screen"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Flight control</h4>
             <p class="portfolio-category">Webdesign, brand &amp; logotypes</p>
@@ -176,7 +173,7 @@
         </figure>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/ytube-app.jpg" alt="Image of Youtube app on a handheld device" title="Youtube app image"></a>
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/ytube-app.jpg" alt="Image of Youtube app on a handheld device" title="Youtube app image"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Youtube app</h4>
             <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
@@ -184,7 +181,7 @@
         </figure>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/management.jpg" alt="Image of app screen for claim management" title="Claim management screen"></a>
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/management.jpg" alt="Image of app screen for claim management" title="Claim management screen"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Management</h4>
             <p class="portfolio-category">UI design, brand &amp; logotypes</p>
@@ -192,7 +189,7 @@
         </figure>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/korean.jpg" alt="Image of recipe app screen for korean bulgogi beef" title="Korean beef recipe screen"></a>
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/korean.jpg" alt="Image of recipe app screen for korean bulgogi beef" title="Korean beef recipe screen"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Korean beef</h4>
             <p class="portfolio-category">Webdesign, brand &amp; logotypes</p>
@@ -200,13 +197,12 @@
         </figure>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="img/facebook-thumb.jpg" alt="Image of Facebook like and dislike thumb icons" title="Facebook thumbs"></a>
+          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/facebook-thumb.jpg" alt="Image of Facebook like and dislike thumb icons" title="Facebook thumbs"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Facebook thumbs</h4>
             <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
           </figcaption>
         </figure>
-      <!-- </section> -->
 
       </article>
       <article id="about" class="about">
@@ -250,7 +246,7 @@
           <h3 class="team-header profile-header">JONATHAN DOE</h3>
           <h4 class="team-text profile-text">CEO, UI&amp;UX designer</h4>
           <figure>
-            <img src="img/jonathan.jpg" alt="Picture of Jonathan Doe" title="Jonathan Doe" class="profile-image circle">
+            <img src="/img/jonathan.jpg" alt="Picture of Jonathan Doe" title="Jonathan Doe" class="profile-image circle">
             <figcaption>
               <a href="https://www.facebook.com" class="social-icons icon-facebook"></a>
               <a href="https://twitter.com" class="social-icons icon-twitter"></a>
@@ -265,7 +261,7 @@
           <h3 class="team-header profile-header">JANNETE DOE</h3>
           <h4 class="team-text profile-text">Business &amp; marketing</h4>
           <figure>
-            <img src="img/jannete.jpg" alt="Picture of Jannete Doe" title="Jannete Doe" class="profile-image circle">
+            <img src="/img/jannete.jpg" alt="Picture of Jannete Doe" title="Jannete Doe" class="profile-image circle">
             <figcaption>
               <a href="https://www.facebook.com" class="social-icons icon-facebook"></a>
               <a href="https://twitter.com" class="social-icons icon-twitter"></a>
@@ -280,7 +276,7 @@
           <h3 class="team-header profile-header">JANE ELLA DOE</h3>
           <h4 class="team-text profile-text">UX specialist</h4>
           <figure>
-            <img src="img/jane.jpg" alt="Picture of Jane Ella Doe" title="Jane Ella Doe" class="profile-image circle">
+            <img src="/img/jane.jpg" alt="Picture of Jane Ella Doe" title="Jane Ella Doe" class="profile-image circle">
             <figcaption>
               <a href="https://www.facebook.com" class="social-icons icon-facebook"></a>
               <a href="https://twitter.com" class="social-icons icon-twitter"></a>
@@ -295,7 +291,7 @@
           <h3 class="team-header profile-header">JESSIE DOE</h3>
           <h4 class="team-text profile-text">Business and legacy</h4>
           <figure>
-            <img src="img/jessie.jpg" alt="Picture of Jessie Doe" title="Jessie Doe" class="profile-image circle">
+            <img src="/img/jessie.jpg" alt="Picture of Jessie Doe" title="Jessie Doe" class="profile-image circle">
             <figcaption>
               <a href="https://www.facebook.com" class="social-icons icon-facebook"></a>
               <a href="https://twitter.com" class="social-icons icon-twitter"></a>
@@ -312,7 +308,7 @@
           <ul>
             <li>
               <figure class="client-figure">
-                <img src="img/broderic.jpg" alt="Image of Matthew Broderic" title="Matthew Broderic" class="client-image circle">
+                <img src="/img/broderic.jpg" alt="Image of Matthew Broderic" title="Matthew Broderic" class="client-image circle">
                 <figcaption class="client-caption">
                   <h4 class="team-header client-header"><span class="client-name">Matthew Broderic</span> (CEO Hopicola Inc.)</h4>
                   <p class="team-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard my text ever since the 1500s, when lorem upsum is the best text for you.</p>
@@ -333,10 +329,10 @@
           <input type="submit" name="submit-button" value="SEND MESSAGE">
         </form>
         <figure class="contact-map">
-          <img src="img/map-mobile.jpg" alt="Map of San Francisco location" title="San Francisco location">
+          <img src="/img/map-mobile.jpg" alt="Map of San Francisco location" title="San Francisco location">
           <figcaption class="contact-map-caption">
-            <a class="contact-phone" href="">+970 897 580 <span class="contact-weight-light">(7:00 - 20:00)</span></a>
-            <a class="contact-email" href="">info@company.com</a>
+            <a class="contact-phone" href="tel:970897580">+970 897 580 <span class="contact-weight-light">(7:00 - 20:00)</span></a>
+            <a class="contact-email" href="mailto:info@company.com">info@company.com</a>
             <a class="contact-location" href="">USA, <span class="contact-weight-light">San Francisco, 57010, Little Parry St. 826/31</span></a>
           </figcaption>
         </figure>
