--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <a href="#contact">Contact.</a>
     </nav>
     <header id="home" class="header-content">
-      <img class="logo circle" width="21" height="32" src="/img/tear-drop-two.svg" alt="Logo for Avengers" title="Avengers logo">
+      <img class="logo circle" width="21" height="32" src="/img/logo-tear-drop.svg" alt="Logo for Avengers" title="Avengers logo">
       <h1 class="header-logo-text">Hi there! We're Avengers, <strong>creative design agency</strong> we build <strong class="curve-underline">awesome</strong> mobile and websites</h1>
     </header>
     <main>
-      <article id="services" class="services-container">
+      <article id="services" class="services-container section-arrows-white">
         <h2 class="section-header white-color white-line">SERVICES</h2>
         <p class="services-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
         <p class="services-text small-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
@@ -205,7 +205,7 @@
         </figure>
 
       </article>
-      <article id="about" class="about">
+      <article id="about" class="about section-arrows-white">
         <h2 class="about-header white-line">ABOUT</h2>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
@@ -239,7 +239,7 @@
           <button class="contact-us-button">CONTACT US</button>
         </aside>
       </article>
-      <article id="team" class="team">
+      <article id="team" class="team section-arrows-black">
         <h2 class="team-section-header gray-line">TEAM</h2>
         <p class="team-text team-description-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
         <section class="team-profile">
