change the services section to an unordered list

--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
       <h1 class="header-logo-text">Hi there! We're Avengers, <strong>creative design agency</strong> we build <strong class="curve-underline">awesome</strong> mobile and websites</h1>
     </header>
     <main>
-      <article id="services" class="services-container section-arrows-white">
-        <h2 class="section-header white-color white-line">SERVICES</h2>
+      <section id="services" class="services-container section-arrows-white">
+        <h1 class="section-header white-color white-line">Services</h1>
         <p class="services-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
         <p class="services-text small-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         <p class="services-text small-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-        <div class="services-category-container">
-          <section class="services-category">
-            <h3 class="services-header white-color" data-title="ux-design">UI &amp; UX DESIGN</h3>
+        <ul class="services-category-container">
+          <li class="services-category">
+            <h2 class="services-header white-color" data-title="ux-design">UI &amp; UX DESIGN</h2>
             <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
-          </section>
-          <section class="services-category">
-            <h3 class="services-header white-color" data-title="laboratory">LABORATORY</h3>
+          </li>
+          <li class="services-category">
+            <h2 class="services-header white-color" data-title="laboratory">LABORATORY</h2>
             <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
-          </section>
-          <section class="services-category">
-            <h3 class="services-header white-color" data-title="development">DEVELOPMENT</h3>
+          </li>
+          <li class="services-category">
+            <h2 class="services-header white-color" data-title="development">DEVELOPMENT</h2>
             <p class="services-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected support by humour.</p>
-          </section>
-        </div>
+          </li>
+        </ul>
         <section class="pricing">
           <h3 class="sub-section-header white-color white-line">PRICING TABLES</h3>
           <section class="pricing-tables">
@@ -100,7 +100,7 @@
             </div>
           </section>
         </section>
-      </article>
+      </section>
       <article id="portfolio" class="portfolio-container section-arrows-orange">
         <h2 class="portfolio-section-header gray-line">PORTFOLIO</h2>
         <div class="portfolio-slider">
@@ -135,7 +135,7 @@
         <figure class="portfolio-item">
           <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/ytube-app.jpg" alt="Image of Youtube app on a handheld device" title="Youtube app image"></a>
           <figcaption>
-            <h4 class="portfolio-caption-header">Youtube app</h4>
+            <h4 class="portfolio-caption-header">Youtube iphone app</h4>
             <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
           </figcaption>
         </figure>
@@ -339,7 +339,7 @@
       </article>
     </main>
     <footer>
-      <p>Theme by <span class="footer-name">Pierre Borodin</span> <span class="footer-copyright">&copy; copyright 2012<span></p>
+      <p>Theme by <span class="footer-name">Pierre Borodin</span> <span class="footer-copyright">&copy; copyright 2012</span></p>
       <a href="https://www.facebook.com" class="social-icons icon-facebook"></a>
       <a href="https://twitter.com" class="social-icons icon-twitter"></a>
       <a href="https://dribbble.com" class="social-icons icon-dribbble"></a>
